--- a/cortex.yaml
+++ b/cortex.yaml
@@ -8,5 +8,6 @@ info:
   x-cortex-owners:
     - type: group
       name: JupiterOne/security
-  x-cortex-service-groups: tier-4
   x-cortex-tag: nslookup-shodan
+  x-cortex-service-groups:
+    - tier-4
